# project-init

./: .pi.toml  Cargo.toml  README.md  TODO.md  build.rs  templates.example.json
bash/: manpage
man/: MANPAGE.md  pi.1
scripts/: manpage  manpage.cmd
src/: args.rs  constants.rs  includes.rs  lib.rs  main.rs  render.rs  repo.rs  types.rs  util.rs
