[package]
name = "project_init"
version = "3.1.23"
authors = [
    "Vanessa McHale <vamchale@gmail.com>",
    "Legion Labs <devs@legionlabs.com>",
]
description = "Quickly initialize projects from a template."
license-file = "LICENSE"
exclude = ["./.gitignore"]
readme = "README.md"
repository = "https://github.com/vmchale/project-init"
documentation = "https://github.com/vmchale/project-init#README"
homepage = "https://github.com/vmchale/project-init"
edition = "2021"

[build-dependencies]
cli-setup = "0.2.7"

[profile.release]
lto = true

[dependencies]
case = "1.0.0"
chrono = "0.4.19"
clap = { version = "3.0.13", features = ["derive"] }
dirs = "4.0.0"
git2 = "0.13.25"
lazy_static = "1.4.0"
heck = "0.4.0"
os_str_bytes = "6.0.0"
rustache-lists = "0.1.2"
serde = "1.0.136"
serde_derive = "1.0.136"
tempdir = "0.3.7"
text_io = "0.1.9"
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
url = "2.2.2"
