[package]
name = "project_init"
version = "4.0.0"
authors = [
    "Vanessa McHale <vamchale@gmail.com>",
    "Legion Labs <devs@legionlabs.com>",
]
description = "Quickly initialize projects from a template."
license-file = "LICENSE"
exclude = ["./.gitignore"]
readme = "README.md"
repository = "https://github.com/vmchale/project-init"
documentation = "https://github.com/vmchale/project-init#README"
homepage = "https://github.com/vmchale/project-init"
edition = "2021"

[[bin]]
name = "pi"
path = "src/main.rs"

[build-dependencies]
cli-setup = "0.2.7"

[profile.release]
lto = true

[dependencies]
case = "1.0.0"
chrono = "0.4.19"
clap = { version = "3.0.13", features = ["derive"] }
dirs = "4.0.0"
git2 = "0.13.25"
lazy_static = "1.4.0"
heck = "0.4.0"
os_str_bytes = "6.0.0"
reqwest = { version = "0.11.9", features = ["json"] }
rustache-lists = "0.1.2"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.78"
tempdir = "0.3.7"
text_io = "0.1.9"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
url = { version = "2.2.2", features = ["serde"] }
